sdk/sdk_2014.4/.metadata/.plugins/org.eclipse.cdt.ui/cam.build.log
12:15:08 **** Auto Build of configuration Debug for project cam ****
make all 
'Building file: C:/Users/cag01/Documents/mdh/vhdl/gimme2a/sdk_2014.2/src/vasa_udp_client.c'
'Invoking: ARM Linux gcc compiler'
arm-xilinx-linux-gnueabi-gcc -Wall -O0 -g3 -I"C:\Users\cag01\Documents\mdh\vhdl\gimme2a\sdk_2014.2\src" -c -fmessage-length=0 -MT"src_shared/vasa_udp_client.o" -MMD -MP -MF"src_shared/vasa_udp_client.d" -MT"src_shared/vasa_udp_client.d" -o "src_shared/vasa_udp_client.o" "C:/Users/cag01/Documents/mdh/vhdl/gimme2a/sdk_2014.2/src/vasa_udp_client.c"
'Finished building: C:/Users/cag01/Documents/mdh/vhdl/gimme2a/sdk_2014.2/src/vasa_udp_client.c'
' '
'Building file: ../src/udp_test.c'
'Invoking: ARM Linux gcc compiler'
arm-xilinx-linux-gnueabi-gcc -Wall -O0 -g3 -I"C:\Users\cag01\Documents\mdh\vhdl\gimme2a\sdk_2014.2\src" -c -fmessage-length=0 -MT"src/udp_test.o" -MMD -MP -MF"src/udp_test.d" -MT"src/udp_test.d" -o "src/udp_test.o" "../src/udp_test.c"
../src/udp_test.c: In function 'main':
../src/udp_test.c:157:3: error: too few arguments to function 'SendImage'
   SendImage(FB0_ADDR);
   ^
In file included from ../src/udp_test.c:32:0:
C:\Users\cag01\Documents\mdh\vhdl\gimme2a\sdk_2014.2\src/VDMA.h:32:5: note: declared here
 int SendImage(uint32_t BaseAddress, uint16_t width, uint16_t height, uint16_t bpp);
     ^
make: *** [src/udp_test.o] Fel 1

12:15:09 Build Finished (took 757ms)

